<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>ch.vd.bpm.tools</groupId>
        <artifactId>bonita-build-tools</artifactId>
        <version>2.1.0-bonita-7.15.4</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.vd.fiscalite.dperm.process</groupId>
    <artifactId>dperm-process-release</artifactId>
    <version>24.3.1.2-SNAPSHOT</version>

    <packaging>pom</packaging>

    <dependencies>
        <dependency>
            <groupId>ch.vd.bpm.dperm.test</groupId>
            <artifactId>dperm-bonita-toolbox</artifactId>
            <version>7.15.4-vd-01-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>com.sun.xml.bind</groupId>
                    <artifactId>jaxb-impl</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>1.7.21</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.2</version>
            <scope>test</scope>
        </dependency>
        <!-- WS MOCK -->
        <dependency>
            <groupId>org.mock-server</groupId>
            <artifactId>mockserver-netty-no-dependencies</artifactId>
            <version>5.15.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mock-server</groupId>
            <artifactId>mockserver-client-java-no-dependencies</artifactId>
            <version>5.15.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <environment>Integration</environment>
        <test.environnement>local</test.environnement>

        <bonita.commands.elasticsearch.version>2.1.1</bonita.commands.elasticsearch.version>

        <project.workspace.groupId>ch.vd.fiscalite.dperm.bpm</project.workspace.groupId>
        <project.workspace.artifactId>bonita-repository-PP</project.workspace.artifactId>
        <project.workspace.version>24.3.1.2-SNAPSHOT</project.workspace.version>

        <bonita-repository>${project.build.directory}/repo</bonita-repository>
        <bonita.version.licence>41-SNAPSHOT</bonita.version.licence>
        <bonita.home>${project.build.directory}/bonita-home</bonita.home>
    </properties>

    <profiles>
        <profile>
            <id>current-release</id>
            <activation>
                <property>
                    <name>!all</name>
                </property>
            </activation>
            <modules>
            </modules>
        </profile>
        <profile>
            <id>all</id>
            <activation>
                <property>
                    <name>all</name>
                </property>
            </activation>
            <modules>
                <module>DPerm-ACO-Acquisition</module>
                <module>DPerm-ACO-DocumentEntrant</module>
                <module>DPerm-ACO-Traitement</module>
                <module>DPerm-AttributionMetier</module>
                <module>DPerm-COM-AVS-Acquisition</module>
                <module>DPerm-COM-AVS-DocumentEntrant</module>
                <module>DPerm-COM-AVS-Traitement</module>
                <module>DPerm-ControleAssujetissementMultiple</module>
                <module>DPerm-CSR-ARI-Acquisition</module>
                <module>DPerm-CSR-ARI-DocumentEntrant</module>
                <module>DPerm-CSR-ARI-Traitement</module>
                <module>DPerm-DI-Acquisition</module>
                <module>DPerm-DI-PJ-DocumentEntrant</module>
                <module>DPerm-DI-Reattribution</module>
                <module>DPerm-DI-Traitement</module>
                <module>DPerm-IdentificationMultiple</module>
                <module>DPerm-IndexationMultiple</module>
                <module>DPerm-IndividuIdentifieMultiple</module>
                <module>DPerm-PJ-Acquisition</module>
                <module>DPerm-PJ-ECHUE-DocumentEntrant</module>
                <module>DPerm-PJ-ECHUE-Traitement</module>
                <module>DPerm-PJ-Traitement</module>
                <module>DPerm-PREST-AI-Acquisition</module>
                <module>DPerm-PREST-AI-DocumentEntrant</module>
                <module>DPerm-PREST-AI-Traitement</module>
                <module>DPerm-REQDES-Acquisition</module>
                <module>DPerm-REQDES-DocumentEntrant</module>
                <module>DPerm-REQDES-Traitement</module>
                <module>DPerm-REQDES-TraitementBoucle</module>
                <module>DPerm-REQDES-ExonerationBoucle</module>
                <module>DPerm-SIPF-BATCH-DocumentEntrant</module>
                <module>DPerm-SIPF-BATCH-Traitement</module>
                <module>DPerm-Tache-Manuelle</module>
                <module>DPerm-TO-BA-DocumentEntrant</module>
                <module>DPerm-TO-BA-Traitement</module>
                <module>DPerm-DEPART-HC-DocumentEntrant</module>
                <module>DPerm-DEPART-HC-Acquisition</module>
                <module>DPerm-DEPART-HC-Traitement</module>
                <module>DPerm-CONV-SEPAR-DocumentEntrant</module>
                <module>DPerm-CONV-SEPAR-Acquisition</module>
                <module>DPerm-CONV-SEPAR-Traitement</module>
                <module>DPerm-EVTS-FISCAUX-DocumentEntrant</module>
                <module>DPerm-EVTS-FISCAUX-Traitement</module>
                <module>DPerm-Relance-Auto-Traitement-Assujettissement-Multi</module>
                <module>DPerm-Relance-Auto-Traitement-Assujettissement-Mono</module>
                <module>DPerm-Relance-Auto-Traitement-Identification-Multi</module>
                <module>DPerm-Relance-Auto-Traitement-Identification-Mono</module>
                <module>DPerm-Relance-Auto-Identification</module>
                <module>DPerm-Relance-Auto-Assujettissement</module>
                <module>DPerm-Relance-Auto</module>
                <module>DPerm-CONV-SEPAR-ECHUE-DocumentEntrant</module>
                <module>DPerm-CONV-SEPAR-ECHUE-Traitement</module>
                <module>DPerm-SIPF-OP-DocumentEntrant</module>
                <module>DPerm-SIPF-OP-Traitement</module>
                <module>DPerm-EVTS-NOTARIAT-DocumentEntrant</module>
                <module>DPerm-EVTS-NOTARIAT-Traitement</module>
            </modules>
        </profile>
        <profile>
            <id>bar</id>
            <activation>
                <property>
                    <name>!skipBAR</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <inherited>false</inherited>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <phase>compile</phase>
                                <id>buildBonitaBusinessArchive</id>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M3</version>
                    <configuration>
                        <argLine>-Xmx512m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8</argLine>
                        <systemPropertyVariables>
                            <sysprop.bonita.db.vendor>h2</sysprop.bonita.db.vendor>
                            <env>${test.environnement}</env>
                            <bonita.home>${bonita.home}</bonita.home>
                            <bonita.client>${bonita.client}</bonita.client>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <inherited>false</inherited>
                <groupId>vd.ch.socle.bpm</groupId>
                <artifactId>bonita-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>find-process-names</goal>
                        </goals>
                        <configuration>
                            <propertyName>processes</propertyName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>get-bonita-commands</id>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>vd.ch.bpm.bonita.elasticsearch</groupId>
                                    <artifactId>bonita-commands-elasticsearch</artifactId>
                                    <version>${bonita.commands.elasticsearch.version}</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                    <execution>
                        <id>unpackLicenses</id>
                        <phase>generate-test-resources</phase>
                    </execution>
                    <execution>
                        <id>copy-la-builder</id>
                        <phase>generate-resources</phase>
                    </execution>
                    <execution>
                        <id>unpackRepo</id>
                        <phase>generate-sources</phase>
                    </execution>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>generate-test-resources</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <inherited>false</inherited>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.7</version>
                <executions>
                    <execution>
                        <id>copy-resources-config</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${bonita.home}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/config/dev</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <scm>
        <url>https://dsigit.etat-de-vaud.ch/outils/git/projects/FISC/repos/dperm-process-release/browse</url>
        <connection>scm:git:ssh://git@bitbucket.etat-de-vaud.ch/fisc/dperm-process-release.git</connection>
        <developerConnection>scm:git:ssh://git@bitbucket.etat-de-vaud.ch/fisc/dperm-process-release.git</developerConnection>
        <tag>${project.artifactId}-${project.version}</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>nexus.releases</id>
            <name>Nexus releases</name>
            <url>${nexus.url.releases}</url>
        </repository>
        <snapshotRepository>
            <id>nexus.snapshots</id>
            <name>Nexus snaphots</name>
            <url>${nexus.url.snapshots}</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

</project>